public interface ExerciseProvider {

    String get(String movement);
}
