public class Main {
    public static void main(String[] args) {
        UserResults user = new UserResults();
        user.userSetup();
        user.results();
    }
}