public class MuscleGainGoal extends GoalProfile {

    public MuscleGainGoal() {
        super(
            "Muscle Gain",
            "8-10",
            false,
            "Use controlled movements and moderate repetitions to support muscle growth."
        );
    }
}
