public class OverallFitnessGoal extends GoalProfile {

    public OverallFitnessGoal() {
        super(
            "Overall Fitness",
            "8-12",
            true,
            "Use a balanced routine with moderate repetitions and some cardio for endurance."
        );
    }
}
