public class StrengthGoal extends GoalProfile {

    public StrengthGoal() {
        super(
            "Strength",
            "3-6",
            false,
            "Use heavier loads with lower repetitions to build strength."
        );
    }
}
