public class WeightLossGoal extends GoalProfile {

    public WeightLossGoal() {
        super(
            "Weight Loss",
            "12-15",
            true,
            "Include cardio and use higher repetitions to improve calorie burn and endurance."
        );
    }
}
